popup look different

--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>EqCopier</h1>
-        <button id='button-ss'>Screenshot!</button>
+        <a id="button-ss" class="button3">Screenshot!</a>
     </body>
 </html>
