disable text selection so images dont mess up

--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
         <script src="popup.js"></script>
     </head>
     <body>
-        <h1>EqCopier</h1>
+        <h1 style="color:#339FD3">EqCopier</h1>
         <a id="button-ss" class="button3">Screenshot!</a>
     </body>
 </html>
